<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="account_auth">授权</string>
    <string name="account_bind_setting">帐号与绑定设置</string>
    <string name="account_login">登录</string>
    <string name="account_logout">退出登录</string>
    <string name="account_verify_code">验证</string>
    <string name="action_confirm">确定</string>
    <string name="action_confirm_delete">确认删除</string>
    <string name="action_confirm_hide">确认</string>
    <string name="action_modify">修改</string>
    <string name="action_send">发送</string>
    <string name="action_setting">设置</string>
    <string name="action_share">分享</string>
    <string name="action_skip">跳过</string>
    <string name="activity_debug_jenkins">即刻内测包</string>
    <string name="activity_debug_picture">调试图片</string>
    <string name="activity_industry_chooser">选择行业</string>
    <string name="activity_medal_detail">徽章</string>
    <string name="activity_school_chooser">选择学校</string>
    <string name="activity_title_about">关于即刻</string>
    <string name="activity_title_account_settings">@string/account_bind_setting</string>
    <string name="activity_title_answer_comment">全部评论</string>
    <string name="activity_title_answer_detail">回答详情</string>
    <string name="activity_title_block_list">黑名单</string>
    <string name="activity_title_choose_location">选择地区</string>
    <string name="activity_title_comment_detail">评论详情</string>
    <string name="activity_title_contacts">通讯录好友</string>
    <string name="activity_title_country_code">选择国家/地区</string>
    <string name="activity_title_create_answer">添加回答</string>
    <string name="activity_title_create_group_chat">创建群聊</string>
    <string name="activity_title_create_question">提问</string>
    <string name="activity_title_debug">调试</string>
    <string name="activity_title_debug_video_entry">调试视频</string>
    <string name="activity_title_diagnose">诊断</string>
    <string name="activity_title_display_settings">浏览偏好设置</string>
    <string name="activity_title_edit_personal_info">编辑个人信息</string>
    <string name="activity_title_find_user">发现即友</string>
    <string name="activity_title_group_chat_detail">聊天信息</string>
    <string name="activity_title_image_selector">选择图片</string>
    <string name="activity_title_input_code">输入验证码</string>
    <string name="activity_title_list_merged_mentions_notification">\@我的内容</string>
    <string name="activity_title_login_with_phone_code">手机号登录</string>
    <string name="activity_title_login_with_phone_password">手机号密码登录</string>
    <string name="activity_title_message">消息详情</string>
    <string name="activity_title_my_collects">@string/tab_my_collects</string>
    <string name="activity_title_my_topics">@string/tab_my_topics</string>
    <string name="activity_title_new_topic_list">新鲜推荐</string>
    <string name="activity_title_notification">我的通知</string>
    <string name="activity_title_personal_update_detail">即刻动态</string>
    <string name="activity_title_popular">最近热门</string>
    <string name="activity_title_post_personal_update">发布新动态</string>
    <string name="activity_title_private_settings">隐私设置</string>
    <string name="activity_title_push_settings">推送通知设置</string>
    <string name="activity_title_question_detail">问题详情</string>
    <string name="activity_title_receive_share_to_original_post">发到“即刻”动态</string>
    <string name="activity_title_repost">分享到动态</string>
    <string name="activity_title_scan">@string/scan</string>
    <string name="activity_title_scan_result">扫描结果</string>
    <string name="activity_title_selection">热门动态</string>
    <string name="activity_title_settings">系统设置</string>
    <string name="activity_title_system_notification">系统通知</string>
    <string name="activity_title_topic">圈子详情</string>
    <string name="activity_title_view_conversation">查看对话</string>
    <string name="activity_title_weibo">微博好友</string>
    <string name="activity_title_weibo_share">微博分享</string>
    <string name="add_block">加入黑名单</string>
    <string name="add_block_success">加入黑名单成功</string>
    <string name="add_member">添加成员</string>
    <string name="album">相册</string>
    <string name="all_group_chat">全部群聊</string>
    <string name="all_members">全部成员</string>
    <string name="all_replies">全部回复</string>
    <string name="anonymous_user">匿名用户</string>
    <string name="app_name">即刻</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bind_phone">绑定手机</string>
    <string name="bind_phone_tip">绑定手机后，就可以发布内容啦~</string>
    <string name="bio">个性签名</string>
    <string name="bio_input_hint">向想认识你的人，介绍一下自己吧</string>
    <string name="block_stranger_chat">不让未关注的人向我发起聊天</string>
    <string name="block_stranger_chat_tip">开启聊天保护后，你未关注的人将不能向你发送聊天消息和打招呼。</string>
    <string name="blocked_list">黑名单</string>
    <string name="blocked_list_tip">被拉黑的用户不能关注你，不能向你发起聊天，也不能回复你的评论或给你的评论点赞；同时，你在其他消息的评论区也不会再看到TA的评论。</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="can_not_play_music">无法播放音乐</string>
    <string name="cancel">取消</string>
    <string name="cancel_stick">不再置顶</string>
    <string name="character_counter_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="chat">聊天</string>
    <string name="chat_confirm_delete_conversation">删除后聊天记录不可恢复，确认删除吗？</string>
    <string name="chat_confirm_resend_message">要重新发送该消息吗？</string>
    <string name="chat_follow_him_or_her">关注%s</string>
    <string name="chat_follow_reminder">和%s聊得开心吗？关注对方，了解更多</string>
    <string name="chat_message_goto_upgrade">前往升级 ></string>
    <string name="chat_message_unsupported_tips">你收到了一条消息，但由于版本过低无法显示，请升级版本后查看。</string>
    <string name="chat_no_conversation">暂时没有对话哦</string>
    <string name="chat_no_new_message">暂时没有聊天消息哦</string>
    <string name="chat_no_new_unread_content">没有新的未读内容</string>
    <string name="chat_poke">招呼</string>
    <string name="chat_resend">重新发送</string>
    <string name="chat_say_hey">打个招呼吧</string>
    <string name="chat_sound_tip">关闭后，有新聊天通知时不会产生提醒声音。</string>
    <string name="chat_sound_title">开启聊天通知提醒声音</string>
    <string name="chat_to_find_friend">去发现有趣的即友</string>
    <string name="check_abandon_edited">是否放弃编辑成果？</string>
    <string name="clear_cache">清理缓存</string>
    <string name="clear_cache_content">所有缓存将会被清除</string>
    <string name="clear_cache_title">清理缓存</string>
    <string name="close">关闭</string>
    <string name="disable_video_multi_surface">禁用视频无缝切换</string>
    <string name="disable_video_multi_surface_tip">如果视频出现音画不同步或者卡死问题，请打开这个开关</string>
    <string name="enable_video_auto_play">Wi-Fi下自动播放视频</string>
    <string name="enable_video_auto_play_tip">开启后，当网络处于Wi-Fi环境下将自动静音播放视频。</string>
    <string name="fcm_first_tip">开启优先使用FCM推送后，当满足FCM条件，优先使用FCM推送</string>
    <string name="fcm_first_title">优先使用FCM推送</string>
    <string name="follow_push_tip">关闭后，有人关注你时不会再发送系统通知。</string>
    <string name="follow_push_title">有人关注我时推送通知</string>
    <string name="hide_phone">不让别人通过手机号找到我</string>
    <string name="hide_phone_tip">开启隐私保护后，别人将无法通过手机号找到你。</string>
    <string name="hide_subscribed_topics">不让别人看到我加入的圈子</string>
    <string name="hide_subscribed_topics_tip">开启隐私保护后，别人将看不到你加入的圈子列表，关注你的人也不会在动态页看到你新加入一个圈子的提示。</string>
    <string name="hide_weibo">不让别人通过微博找到我</string>
    <string name="hide_weibo_tip">开启隐私保护后，别人将无法通过微博找到你。</string>
    <string name="join_us">加入即刻</string>
    <string name="login_get_code">获取验证码</string>
    <string name="login_hint_code">输入验证码</string>
    <string name="login_hint_password">输入密码</string>
    <string name="login_hint_phone">输入手机号码</string>
    <string name="manage_my_topics_push_tip">点击铃铛图标，设定每个圈子是否需要精选内容的推送通知。</string>
    <string name="manage_my_topics_push_title">已加入的圈子是否开启精选内容推送</string>
    <string name="modify_password">修改密码</string>
    <string name="night">夜间模式</string>
    <string name="operation_push_tip">我们会在平日里不定期地推送一些有趣的内容，关闭这个选项后你将不再会收到它们。</string>
    <string name="operation_push_title">接收热门内容推送</string>
    <string name="other">其他</string>
    <string name="platform_qq">QQ</string>
    <string name="platform_wechat">微信</string>
    <string name="platform_weibo">微博</string>
    <string name="privacy_policy">隐私政策</string>
    <string name="pure_background_tip">"我们建议你在打开后台纯净模式后，把即刻锁定在任务后台，这样可以确保仍然可以收到消息提醒，但并不会有大量耗电。

如果你对消息提醒的及时性有较高要求，我们不建议开启后台纯净模式。"</string>
    <string name="pure_background_title">后台纯净模式</string>
    <string name="safety_verification">安全验证</string>
    <string name="safety_verification_tip">为了保证你的帐号安全，需先验证你的身份，验证成功后可以进行下一步操作。</string>
    <string name="score_app">给即刻评分</string>
    <string name="share_app">把即刻推荐给朋友</string>
    <string name="show_no_pic_mode">图片省流量模式</string>
    <string name="show_no_pic_mode_tip">开启后，在数据网络下将不会预先加载消息配图。</string>
    <string name="show_subscribe_tab">在首页展示“订阅”页</string>
    <string name="show_subscribe_tab_tip">在“订阅”页中，将展示你加入的圈子内的精华内容。</string>
    <string name="tab_support_center">帮助与反馈</string>
    <string name="upgrade_app_title">检查新版本</string>
    <string name="user_agreement">用户协议</string>
    <string name="wifi_auto_download_upgrade">WiFi环境下自动下载更新</string>
</resources>