<?xml version="1.0" encoding="utf-8"?>
<LinearLayout style="@style/Login.Container"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:id="@id/lay_up" style="@style/Login.InputBox">
        <TextView android:id="@id/tv_country_code" style="@style/Login.CountryCode" />
        <View android:background="@color/jike_divider_gray" android:layout_width="0.5dip" android:layout_height="30.0dip" />
        <EditText android:id="@id/et_up" android:layout_width="0.0dip" android:layout_height="fill_parent" android:hint="@string/login_hint_phone" android:layout_weight="1.0" android:inputType="phone" style="@style/Login.Input" />
    </LinearLayout>
    <LinearLayout android:id="@id/lay_down" style="@style/Login.InputBox">
        <androidx.appcompat.widget.AppCompatEditText android:id="@id/et_down" android:layout_width="0.0dip" android:layout_height="fill_parent" android:hint="@string/login_hint_password" android:layout_weight="1.0" android:inputType="textPassword" style="@style/Login.Input" />
        <com.google.android.material.internal.CheckableImageButton android:id="@id/iv_password_toggle" style="@style/Login.PasswordToggle" />
    </LinearLayout>
    <TextView android:id="@id/tv_action" android:text="@string/account_login" style="@style/Login.ActionButton" />
</LinearLayout>