<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView android:layout_gravity="end" android:id="@id/lay_drawer_content" android:background="@color/jike_background_gray" android:focusable="true" android:scrollbars="none" android:clickable="true" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="@dimen/text_24" android:textColor="@color/jike_text_dark_gray" android:id="@id/tv_title" android:background="@color/jike_background_white" android:paddingTop="10.0dip" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="更多" android:paddingStart="@dimen/jike_list_common_padding" android:paddingEnd="@dimen/jike_list_common_padding" />
        <com.ruguoapp.jike.view.widget.UserPageItem android:id="@id/lay_my_collects" android:layout_width="fill_parent" android:layout_height="wrap_content" app:icon_disable_shadow="true" app:user_page_icon="@drawable/ic_messages_collect_selected" app:user_page_title="@string/activity_title_my_collects" />
        <com.ruguoapp.jike.view.widget.UserPageItem android:id="@id/lay_support_center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" app:user_page_icon="@drawable/ic_personal_tab_support_center" app:user_page_title="@string/tab_support_center" />
        <com.ruguoapp.jike.view.widget.UserPageItem android:id="@id/lay_share_app" android:layout_width="fill_parent" android:layout_height="wrap_content" app:user_page_icon="@drawable/ic_setting_share_jike" app:user_page_title="@string/share_app" />
        <LinearLayout android:orientation="vertical" android:id="@id/lay_dynamic_entries" android:layout_width="fill_parent" android:layout_height="wrap_content" />
        <com.ruguoapp.jike.view.widget.RgSettingTab android:id="@id/lay_night" android:background="@color/jike_background_white" android:paddingTop="1.0dip" android:paddingBottom="1.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" app:mask_enable="false" app:settings_icon="@drawable/ic_personal_tab_night_mode" app:settings_show_divider="false" app:settings_show_switch="true" app:settings_title="@string/night" />
        <com.ruguoapp.jike.view.widget.UserPageItem android:id="@id/lay_setting" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" app:user_page_icon="@drawable/ic_personal_tab_setting" app:user_page_title="@string/activity_title_settings" />
        <com.ruguoapp.jike.view.widget.UserPageItem android:id="@id/lay_debug" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" app:user_page_icon="@drawable/ic_debug" app:user_page_title="调试工具" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>