<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@color/jike_background_gray" android:clickable="true" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout android:id="@id/lay_container" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="?actionBarSize">
        <com.ruguoapp.jike.view.widget.AnimatedLogoView android:id="@id/ivIcon" android:layout_width="60.0dip" android:layout_height="60.0dip" android:layout_marginTop="30.0dip" android:layout_centerHorizontal="true" />
        <TextView android:textSize="@dimen/text_12" android:textColor="@color/jike_text_medium_gray" android:gravity="center_horizontal" android:id="@id/tvVersion" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_below="@id/ivIcon" android:layout_centerHorizontal="true" />
        <com.ruguoapp.jike.view.widget.RgSettingTab android:id="@id/layUpgradeApp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="30.0dip" android:layout_below="@id/tvVersion" app:settings_title="@string/upgrade_app_title" />
        <com.ruguoapp.jike.view.widget.RgSettingTab android:id="@id/layWifiAutoUpgrade" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/jike_list_common_margin" android:layout_below="@id/layUpgradeApp" app:mask_enable="false" app:settings_show_switch="true" app:settings_title="@string/wifi_auto_download_upgrade" />
        <com.ruguoapp.jike.view.widget.RgSettingTab android:id="@id/layUserAgreement" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/jike_list_common_margin" android:layout_below="@id/layWifiAutoUpgrade" app:settings_title="@string/user_agreement" />
        <com.ruguoapp.jike.view.widget.RgSettingTab android:id="@id/layPrivacyPolicy" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/jike_list_common_margin" android:layout_below="@id/layUserAgreement" app:settings_title="@string/privacy_policy" />
    </RelativeLayout>
    <include layout="@layout/layout_appbar" />
</RelativeLayout>